Avoid vertical gaps when the main content is short.

--- a/src/doc/assets/common.css
+++ b/src/doc/assets/common.css
@@ -10,6 +10,8 @@ body {
     margin: 0;
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
+    align-items: stretch;
 
     header {
         flex-basis: 100%;
